<resources>
    <string name="app_name">NUMAD-18S-AlexandraKacoyannakis</string>
    <string name="my_name">Alexandra Kacoyannakis</string>
    <string name="about_name">Name: Alexandra Kacoyannakis</string>
    <string name="year">Year in School: 2nd year</string>
    <string name="dictionary">Dictionary</string>
    <string name="enter_word">Enter Word</string>
    <string name="clear_button">Clear</string>
    <string name="acknowledgements_button">Acknowledgements</string>
    <string name="assignment1">Assignment 1</string>
    <string name="assignment2">Assignment 2</string>
    <string name="assignment3">Assignment 3</string>
    <string name="assignment4">Assignment 4</string>
    <string name="bullet">\u2022</string>
    <string name="assign1ack">
        In order to bypass issues with the Play Store testing, a conditional to skip when testing is on:
    </string>
    <string name="assign2ack">
        Word dictionary list is taken from this source and stored as a txt file:
    </string>
    <string name="assign2tone">
        Media player did not seem to create properly on lower APIs. The ToneGenerator class helped to provide the beep.
    </string>
    <string name="word_game">Word Game</string>

    <string name="long_app_name">Scroggle</string>
    <string name="action_settings">Settings</string>
    <string name="ok_label">OK</string>
    <string name="about_title">How to Play Scroggle</string>
    <string name="about_text">\ This game is a combination of Scrabble and Boogle. There are two rounds. In each round, you are presented with a board divided into 9 sections.\n\ \n\Each section represents a 9 letter word. Try to figure make the longest word you can. When you switch boards, your answer is locked and you can\'t change it. You will have 90 seconds per round to get the longest words possible. Bonus points are awarded for correct words with 9 letters. Points are subtracted for any incorrect words. \n\n\Good luck and happy playing! </string>
    <string name="declare_winner">%1$s is the winner</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="pause_label">Pause</string>
    <string name="timer_finished">Time\'s Up! Final score: </string>
    <string name="phase_1">Phase 1</string>
    <string name="phase_2">Phase 2</string>
    <string name="score">Score: </string>

    <!--Fragment strings -->
    <string name="continue_label">Continue</string>
    <string name="about_label">How to Play</string>
    <string name="new_game_label">New Game</string>
    <string name="correct_words">Correct Words: </string>
    <string name="turn_off_music">Turn Off Music</string>
    <string name="turn_on_music">Turn On Music</string>

    <!-- Acknowledgements strings -->
    <string name="acknowledgement1">\"Clippity Clop\" by Eric Matyas from www.soundimage.org</string>
    <string name="acknowledgement2">\"Glass Pinging\" by Go445 from http://soundbible.com/2084-Glass-Ping.html</string>
    <string name="acknowledgement3">\Letter and menu icons from Icons8 https://icons8.com</string>

</resources>
