<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/control_padding"
    android:id="@+id/fragment_control"
    tools:context=".GameActivity"
    android:rowCount="2">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_row="0">

        <Button
            android:id="@+id/button_restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_low"
            android:drawableTop="@drawable/restart"
            android:text="@string/restart_label"/>
        <Button
            android:id="@+id/button_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_low"
            android:drawableTop="@drawable/home"
            android:text="@string/main_menu_label"/>

        <Button
            android:id="@+id/button_pause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:drawableTop="@drawable/pause"
            android:text="@string/pause_label"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_row="1">

        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</GridLayout>